se hicieron nuevas validaciones en los formularios de contacto y beca

--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -201,40 +201,40 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <form [formGroup]="infoForm" (ngSubmit)="guardarCambiosInfo()">
+            <form [formGroup]="infoForm" (ngSubmit)="guardarCambiosInfo()" novalidate>
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
                     <input formControlName="nombre" class="form-control" id="name" type="text" 
-                    placeholder="Ingresa tu nombre *" required="required" 
-                    data-validation-required-message="Por favor ingresa tu nombre.">
-                    <p class="help-block text-danger"></p>
+                    placeholder="Ingresa tu nombre *">
+                    <p *ngIf="infoForm.controls['nombre'].errors?.required && infoForm.controls.nombre.touched" class="text-danger">Por favor ingresa tu nombre.</p>
+                    <p *ngIf="infoForm.controls.nombre.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
                   </div>
                   <div class="form-group">
                     <input formControlName="correo" class="form-control" id="email" 
-                    placeholder="Ingresa tu email *" required="required" 
-                    data-validation-required-message="Por favor ingresa tu correo electrónico.">
-                    <p class="help-block text-danger"></p>
+                    placeholder="Ingresa tu email *">
+                    <p *ngIf="infoForm.controls['correo'].errors?.required && infoForm.controls.correo.touched" class="text-danger">Por favor ingresa tu email.</p>
+                    <p *ngIf="infoForm.controls.correo.hasError('email')" class="text-danger">Debes ingresar una casilla de correo válida.</p>
                   </div>
                   <div class="form-group">
                     <input formControlName="telefono" class="form-control" id="phone" type="tel" 
-                    placeholder="Ingresa tu teléfono *" required="required" 
-                    data-validation-required-message="Por favor ingresa tu número telefónico.">
-                    <p class="help-block text-danger"></p>
+                    placeholder="Ingresa tu teléfono *">
+                    <p *ngIf="infoForm.controls['telefono'].errors?.required && infoForm.controls.telefono.touched" class="text-danger">Por favor ingresa tu telefono.</p>
+                    <p *ngIf="infoForm.controls.telefono.hasError('minlength')" class="text-danger">Debes ingresar un telefono válido.</p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <textarea formControlName="mensaje" class="form-control" id="message" 
-                    placeholder="Ingresa tu mensaje aquí *" required="required" 
-                    data-validation-required-message="Por favor ingresa un mensaje."></textarea>
-                    <p class="help-block text-danger"></p>
+                    placeholder="Ingresa tu mensaje aquí *"></textarea>
+                    <p *ngIf="infoForm.controls['mensaje'].errors?.required && infoForm.controls.mensaje.touched" class="text-danger">Por favor ingresa un mensaje.</p>
+                    <p *ngIf="infoForm.controls.mensaje.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
                   </div>
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-lg-12 text-center">
-                  <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar mensaje</button>
+                  <div id="success"></div> 
+                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar mensaje </button>
                 </div>
               </div>
             </form>
@@ -304,30 +304,42 @@
                   <div formGroupName="alumno">  
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Nombres" formControlName="nombres">
-                    </div>
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Apellido materno" formControlName="apellido1">
+                      <p *ngIf="becaForm.controls.alumno.controls.nombres.errors?.required && becaForm.controls.alumno.controls.nombres.touched" class="text-danger">Por favor ingresa tu nombre.</p>
+                      <p *ngIf="becaForm.controls.alumno.controls.nombres.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Apellido paterno" formControlName="apellido2">
+                      <p *ngIf="becaForm.controls.alumno.controls.apellido2.errors?.required && becaForm.controls.alumno.controls.apellido2.touched" class="text-danger">Por favor ingresa tu apellido paterno.</p>
+                      <p *ngIf="becaForm.controls.alumno.controls.apellido2.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Apellido materno" formControlName="apellido1">
+                      <p *ngIf="becaForm.controls.alumno.controls.apellido1.errors?.required && becaForm.controls.alumno.controls.apellido1.touched" class="text-danger">Por favor ingresa tu apellido materno.</p>
+                      <p *ngIf="becaForm.controls.alumno.controls.apellido1.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
                     </div>
                     <div class="form-group">
                       <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="Fecha nacimiento" formControlName="fechanac">
+                      <p *ngIf="becaForm.controls.alumno.controls.fechanac.errors?.required && becaForm.controls.alumno.controls.fechanac.touched" class="text-danger">Por favor ingresa tu fecha de nacimiento.</p>
                     </div>
                     <div class="form-group">
                       <input type="email" class="form-control" placeholder="Correo" formControlName="correo">
+                      <p *ngIf="becaForm.controls.alumno.controls.correo.errors?.required && becaForm.controls.alumno.controls.correo.touched" class="text-danger">Por favor ingresa tu casilla de correo electronico.</p>
+                      <p *ngIf="becaForm.controls.alumno.controls.correo.hasError('email')" class="text-danger">Debes ingresar una casilla de correo electronio válida.</p>
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Teléfono" formControlName="telefono">
+                      <p *ngIf="becaForm.controls.alumno.controls.telefono.errors?.required && becaForm.controls.alumno.controls.telefono.touched" class="text-danger">Por favor ingresa tu telefono.</p>
+                      <p *ngIf="becaForm.controls.alumno.controls.telefono.hasError('minlength')" class="text-danger">Debes ingresar un telefono válido.</p>
                     </div>
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Rut" formControlName="rut">
+                      <input type="text" class="form-control" placeholder="Rut" formControlName="rut" (keyup)="validateRut()">
+                      <p *ngIf="!validaRut && becaForm.controls.alumno.controls.rut.touched" class="text-danger">Debes ingresar un RUT válido.</p>
                     </div>
                     <!--<div class="form-group">
                       <input type="text" class="form-control" placeholder="País" formControlName="pais">
                     </div>-->
                     <div class="form-group">
-                      <select name="cars" class="form-control" formControlName="region" (click)="getComunas()">
+                      <select name="cars" class="form-control" formControlName="region" (change)="getComunas()">
                           <option value="">Seleccione Región</option>
                           <option value="{{ region.codRegion }}" *ngFor="let region of regiones">
                               Region {{ region.codRegion }}
@@ -336,8 +348,8 @@
                       <!--<input type="text" class="form-control" placeholder="Región" formControlName="region">-->
                     </div>
                     <div class="form-group">
-                        <select name="cars" class="form-control" formControlName="comuna" (click)="getColegios()">
-                            <option value="" selected>Seleccione Comuna</option>
+                        <select name="cars" class="form-control" formControlName="comuna" (change)="getColegios()">
+                            <option value="" >Seleccione Comuna</option>
                             <option value="{{ comuna.id }}" *ngFor="let comuna of comunas">
                                 Comuna {{ comuna.nom_comuna }}
                             </option>
@@ -356,28 +368,40 @@
                     <h4 class="section-subheading">Datos apoderado</h4>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Nombres" formControlName="nombres">
+                      <p *ngIf="becaForm.controls.apoderado.controls.nombres.errors?.required && becaForm.controls.apoderado.controls.nombres.touched" class="text-danger">Por favor ingresar nombre apoderado.</p>
+                      <p *ngIf="becaForm.controls.apoderado.controls.nombres.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
+                    </div>
+                     <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Apellido paterno" formControlName="apellido2"> 
+                      <p *ngIf="becaForm.controls.apoderado.controls.apellido2.errors?.required && becaForm.controls.apoderado.controls.apellido2.touched" class="text-danger">Por favor ingresar apellido paterno.</p>
+                      <p *ngIf="becaForm.controls.apoderado.controls.apellido2.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Apellido materno" formControlName="apellido1">
-                    </div>
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Apellido paterno" formControlName="apellido2"> 
+                      <p *ngIf="becaForm.controls.apoderado.controls.apellido1.errors?.required && becaForm.controls.apoderado.controls.apellido1.touched" class="text-danger">Por favor ingresar apellido materno.</p>
+                      <p *ngIf="becaForm.controls.apoderado.controls.apellido1.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Correo" formControlName="correo">
+                      <p *ngIf="becaForm.controls.apoderado.controls.correo.errors?.required && becaForm.controls.apoderado.controls.correo.touched" class="text-danger">Por favor ingresar casilla de correo válida.</p>
+                      <p *ngIf="becaForm.controls.apoderado.controls.correo.hasError('email')" class="text-danger">Debes ingresar una casilla de correo electronio válida.</p>
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Teléfono" formControlName="telefono">
+                      <p *ngIf="becaForm.controls.apoderado.controls.telefono.errors?.required && becaForm.controls.apoderado.controls.telefono.touched" class="text-danger">Por favor ingresar telefono válido.</p>
+                      <p *ngIf="becaForm.controls.apoderado.controls.telefono.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
                     </div>
                     <h5>Escribe tus razones para obtener la beca:</h5>
                     <h6>*Esta es la parte más importante</h6>
                     <div class="form-group">
                       <textarea class="form-control" rows="7" formControlName="comentario"></textarea>
+                      <p *ngIf="becaForm.controls.apoderado.controls.comentario.errors?.required && becaForm.controls.apoderado.controls.comentario.touched" class="text-danger">Por favor ingresar comentario válido.</p>
+                      <p *ngIf="becaForm.controls.apoderado.controls.comentario.hasError('minlength')" class="text-danger">Debes ingresar 3 caracteres como mínimo.</p>
                     </div>
                   </div>
-                  <h6 *ngIf="!becaForm.valid">Aún no has completado los campos</h6>
+                  <h6 *ngIf="!becaForm.valid">Aún no has completado los campos (*)</h6>
                   <h6 *ngIf="becaForm.valid">Puedes enviar el formulario</h6>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit" [disabled]="!becaForm.valid">Enviar</button>
+                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar</button>
                 </form>
               </div>
             </div>
