--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -3,7 +3,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#home"><img src="../../../assets/img/logos/premate-logo-cut.png" id="logopre"></a>
+        <a class="navbar-brand js-scroll-trigger" href="#video"><img src="../../../assets/img/logos/premate-logo-cut.png" id="logopre"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -28,15 +28,17 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead">
-      <div class="container">
-        <div class="intro-text">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LAKgjzJ_ep0" allowfullscreen></iframe>
+      <header class="masthead" id = "video">
+        <div class="container">
+          <div class="intro-text">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LAKgjzJ_ep0" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
-      </div>
-    </header>
+      </header>
+
+
 
     <!-- Services -->
     <section id="quienes_somos">
