Ultimos cambios login

--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -22,6 +22,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Más información</a>
             </li>
+            <li>
+              <a class="nav-link js-scroll-trigger" [routerLink]="['/login']">Login</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -419,3 +422,4 @@
     </div>
   </div>
   </div>
+
